apps/tautulli/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config-pvc
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:2.10.4
          ports:
            - containerPort: 8181
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
